@@ -41,4 +41,6 @@ extern void Screen_Redraw(void);
 extern unsigned short Text_Width(unsigned char bank, char* addr, int maxlen);
 extern unsigned char Text_Height(unsigned char bank, char* addr, int maxlen);
 
+extern unsigned short Sys_Version(void);
+
 #endif
