@@ -204,3 +204,27 @@ _Text_Height:
 	pop ix
 	pop bc
 	ret
+
+.export _Sys_Version
+_Sys_Version:
+	push bc
+	push ix
+	push iy
+	ld e,8
+	ld hl,#0x8103
+	rst #0x28
+	ld d,0
+	ld e,(iy+0)
+	ld hl,0
+	ld b,10
+mult10:
+	add hl,de ; major version = tens digit
+	djnz mult10
+	ld d,0
+	ld e,(iy+1)
+	add hl,de ; minor version = ones digit
+	pop iy
+	pop ix
+	pop bc
+	ret
+	
